# ftle

./: .gitignore  CHANGELOG.md  README.md  pytest.ini  setup.cfg
src/ftle/: __init__.py  __main__.py  coords.py  fields.py  ladim2ftle.py  script.py  tracker.py
tests/: test_coords.py  test_fields.py  test_ladim2ftle.py  test_tracker.py
