[metadata]
name = ftle
version = attr: ftle.__version__
author = Pål Næverlid Sævik
author_email = paal.naeverlid.saevik@hi.no
license = MIT


[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy
    pytest
    xarray
    netCDF4
    PyYAML
    pyproj
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    ftle = ftle.script:main
    ladim2alcs = ftle.script:ladim2ftle

#[options.package_data]
#* = *.yaml, *.geojson

[options.packages.find]
where=src
